@startuml

left to right direction
' Horizontal lines:
' Vertical lines: -->, <--, <-->, ->, -|{, <->
title Model konceptualny


entity album {
  * author:
  * title:
  * description:
  * created_at:
}

entity image {
  * author:
  * title:
  * description:
  * created_at:
}

entity primary_comment{
  * author:
  * title:
  * content:
  * created_at:
}

entity secondary_comment{
  * author:
  * title:
  * content:
  * created_at:
}

entity tag{
  * title:
  * author:
  * content:
  * created_at:
}

album --|{ image
image   --o{ primary_comment
primary_comment --o{ secondary_comment

tag }o--o{ image
tag }o--o{ album

@enduml
